# dto/index.go
@@ -1,11 +1,16 @@
 package dto
 
+import (
+	"math"
+
+	"github.com/rohanshrestha09/patra-go/enums"
+)
+
 type Query struct {
-	Page   int    `form:"page,default=1"`
-	Size   int    `form:"size,default=10"`
-	Sort   string `form:"sort,default=id"`
-	Order  string `form:"order,default=desc"`
-	Search string `form:"search"`
+	Page  int    `form:"page,default=1"`
+	Size  int    `form:"size,default=10"`
+	Sort  string `form:"sort,default=id"`
+	Order string `form:"order,default=desc"`
 }
 
 type GetByIDArgs struct {
@@ -20,24 +25,33 @@ type GetArgs[T any] struct {
 }
 
 type GetAllArgs[T any] struct {
-	Include   map[string][]string
+	Include   map[enums.Association][]string
 	Exclude   []string
-	Search    bool
 	Filter    T
 	MapFilter map[string]any
+	Search    map[enums.SearchColumn]string
 }
 
 type GetAllResponse[T any] struct {
-	Message string `json:"message"`
-	GetAllResult[T]
-}
-
-type GetAllResult[T any] struct {
+	Message     string  `json:"message"`
 	Data        []T     `json:"data"`
-	Length      int     `json:"length"`
 	Count       int64   `json:"count"`
 	CurrentPage int     `json:"currentPage"`
 	TotalPage   float64 `json:"totalPage"`
+}
+
+type Pagination struct {
+	Page  int
+	Size  int
+	Count int64
+}
+
+func (p *Pagination) GetPages() (int, float64) {
+	currentPage := p.Page
+
+	totalPage := math.Ceil(float64(p.Count) / float64(p.Size))
+
+	return currentPage, totalPage
 }
 
 type GetResponseReturn[T any] struct {
