# models/chat.go
@@ -1,0 +1,7 @@
+package models
+
+type Chat struct {
+	Model
+	Users    []*User    `json:"users" gorm:"many2many:user_chats"`
+	Messages []*Message `json:"messages"`
+}
