# modules/user/controller.go
@@ -4,7 +4,9 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 	"github.com/rohanshrestha09/patra-go/dto"
+	"github.com/rohanshrestha09/patra-go/enums"
 	"github.com/rohanshrestha09/patra-go/interfaces"
 	"github.com/rohanshrestha09/patra-go/models"
 )
@@ -26,7 +28,12 @@ func (u UserController) GetUser(GET interfaces.GET) {
 
 	GET("/user/:email", func(ctx *gin.Context) {
 
-		data, httpError := u.userService.GetUser(ctx.Param("email"))
+		args := dto.GetArgs[models.User]{
+			Filter:  models.User{Email: ctx.Param("email")},
+			Exclude: []string{"Email"},
+		}
+
+		data, httpError := u.userService.GetUser(args)
 
 		if httpError != nil {
 			ctx.JSON(httpError.Status, dto.Response(httpError.Message))
@@ -39,13 +46,85 @@ func (u UserController) GetUser(GET interfaces.GET) {
 
 }
 
+// Get All User godoc
+//
+//	@Summary	Get all user
+//	@Tags		User
+//	@Accept		json
+//	@Produce	json
+//	@Param		page	query		int		false	"Page"
+//	@Param		size	query		int		false	"Page size"
+//	@Param		sort	query		string	false	"Sort"	Enums(id, created_at, name)
+//	@Param		order	query		string	false	"Order"	Enums(asc, desc)
+//	@Param		search	query		string	false	"Search"
+//	@Success	200		{object}	dto.GetAllResponse[models.User]
+//	@Router		/user/ [get]
+func (u UserController) GetUsers(GET interfaces.GET) {
+
+	GET("/user", func(ctx *gin.Context) {
+
+		var query dto.Query
+
+		if err := ctx.BindQuery(&query); err != nil {
+			ctx.JSON(http.StatusBadRequest, dto.Response(err.Error()))
+		}
+
+		args := dto.GetAllArgs[models.User]{
+			Search: map[enums.SearchColumn]string{
+				enums.NAME_COLUMN:  ctx.Query("search"),
+				enums.EMAIL_COLUMN: ctx.Query("search"),
+			},
+		}
+
+		data, count, httpError := u.userService.GetUsers(query, args)
+
+		if httpError != nil {
+			ctx.JSON(httpError.Status, dto.Response(httpError.Message))
+			return
+		}
+
+		pagination := dto.Pagination{
+			Page:  query.Page,
+			Size:  query.Size,
+			Count: count,
+		}
+
+		currentPage, totalPage := pagination.GetPages()
+
+		ctx.JSON(http.StatusOK, dto.GetAllResponse[models.User]{
+			Message:     "Users fetched",
+			Data:        data,
+			Count:       count,
+			CurrentPage: currentPage,
+			TotalPage:   totalPage,
+		})
+
+	})
+
+}
+
+// Follow User godoc
+//
+//	@Summary	Follow User
+//	@Tags		User
+//	@Accept		json
+//	@Produce	json
+//	@Param		id	path		string	true	"User Id"
+//	@Success	201	{object}	dto.ResponseReturn
+//	@Router		/user/{id}/follow [post]
+//	@Security	Bearer
 func (u UserController) FollowUser(POST interfaces.POST) {
 
 	POST("/user/:id/follow", func(ctx *gin.Context) {
 
-		authUser := ctx.MustGet("auth").(models.User)
+		authUser := ctx.MustGet("authUser").(models.User)
 
-		userId := ctx.Param("id")
+		userId, err := uuid.Parse(ctx.Param("id"))
+
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, dto.Response(err.Error()))
+			return
+		}
 
 		httpError := u.userService.FollowUser(authUser, userId)
 
@@ -54,19 +133,34 @@ func (u UserController) FollowUser(POST interfaces.POST) {
 			return
 		}
 
-		ctx.JSON(http.StatusOK, dto.Response("Followed"))
+		ctx.JSON(http.StatusCreated, dto.Response("Followed"))
 
 	})
 
 }
 
+// Unfollow User godoc
+//
+//	@Summary	Unfollow User
+//	@Tags		User
+//	@Accept		json
+//	@Produce	json
+//	@Param		id	path		string	true	"User Id"
+//	@Success	201	{object}	dto.ResponseReturn
+//	@Router		/user/{id}/follow [delete]
+//	@Security	Bearer
 func (u UserController) UnfollowUser(DELETE interfaces.DELETE) {
 
 	DELETE("/user/:id/follow", func(ctx *gin.Context) {
 
-		authUser := ctx.MustGet("auth").(models.User)
+		authUser := ctx.MustGet("authUser").(models.User)
 
-		userId := ctx.Param("id")
+		userId, err := uuid.Parse(ctx.Param("id"))
+
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, dto.Response(err.Error()))
+			return
+		}
 
 		httpError := u.userService.UnfollowUser(authUser, userId)
 
@@ -75,7 +169,7 @@ func (u UserController) UnfollowUser(DELETE interfaces.DELETE) {
 			return
 		}
 
-		ctx.JSON(http.StatusOK, dto.Response("Unfollowed"))
+		ctx.JSON(http.StatusCreated, dto.Response("Unfollowed"))
 
 	})
 
